--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.3",
+    "node-cron": "^3.0.2",
     "nodemon": "^2.0.20",
     "socket.io": "^4.6.1",
     "stripe": "^12.7.0"
