--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,9 @@
   "license": "ISC",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
+    "start": "pm2 start pm2.config.json",
+    "stop": "pm2 stop pm2.config.json",
+    "restart": "pm2 restart pm2.config.json",
     "dev": "nodemon index.js"
   },
   "dependencies": {
@@ -17,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
+    "imgbb-uploader": "^1.5.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.3",
     "node-cron": "^3.0.2",
