--- a/server/package.json
+++ b/server/package.json
@@ -23,8 +23,8 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.3",
     "node-cron": "^3.0.2",
+    "node-html-to-image": "^3.3.0",
     "nodemon": "^2.0.20",
-    "socket.io": "^4.6.1",
-    "stripe": "^12.7.0"
+    "socket.io": "^4.6.1"
   }
 }
