--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^6.8.3",
     "node-cron": "^3.0.2",
     "node-html-to-image": "^3.3.0",
+    "nodemailer": "^6.9.3",
     "nodemon": "^2.0.20",
     "socket.io": "^4.6.1"
   }
