--- a/server/pm2.config.json
+++ b/server/pm2.config.json
@@ -22,6 +22,13 @@
         "env": {
           "NODE_ENV": "production"
         }
+      },
+      {
+        "name": "Recurring Events",
+        "script": "./jobs/recurring.js",
+        "env": {
+          "NODE_ENV": "production"
+        }
       }
     ]
 }
